--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ include_directories(/usr/include /usr/local/include ./include ./src/timeline-tra
 
 set(SOURCES src/osgViewerWX.cpp
 			 src/soundproducer-track.cpp
+			 src/listener-track.cpp
 			 src/EditorManipulator.cpp
 			 src/CreateSoundProducerDialog.cpp src/EditMultipleSoundProducersDialog.cpp src/HRTF-Test-Dialog.cpp 
 			 src/EditListenerDialog.cpp
