Made external listener class to handle controlling listener externally through device.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ set(SOURCES src/osgViewerWX.cpp
 			 src/CreateSoundProducerDialog.cpp src/EditMultipleSoundProducersDialog.cpp src/HRTF-Test-Dialog.cpp 
 			 src/EditListenerDialog.cpp
 			 src/setup-serial-dialog.cpp
+			 src/listener-external.cpp
 			 src/openalsoftaudioengine.cpp src/soundproducer.cpp src/listener.cpp
 			 src/external-orientation-device-serial.cpp
 			 
