Created classes to create and edit reverb zones. Also manage effects.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,9 @@ set ( PROJECT_INCLUDE_DIR ${wxWidgets_INCLUDE_DIRS} ${OPENSCENEGRAPH_INCLUDE_DIR
 include_directories(/usr/include /usr/local/include ./include ./src/timeline-track-editor/include ${PROJECT_INCLUDE_DIR})
 
 set(SOURCES src/osgViewerWX.cpp
+			 src/effects-manager.cpp
+			 src/CreateReverbZoneDialog.cpp
+			 src/EditMultipleReverbZonesDialog.cpp
 			 src/soundproducer-track-manager.cpp
 			 src/soundproducer-track.cpp
 			 src/listener-track.cpp
