--- a/.travis.yml
+++ b/.travis.yml
@@ -19,10 +19,9 @@ script:
 
 after_success:
   - find ./appdir -executable -type f -exec ldd {} \; | grep " => /usr" | cut -d " " -f 2-3 | sort | uniq
-  - curl --upload-file ./AzPainter*.AppImage https://transfer.sh/AzPainter-git.$(git rev-parse --short HEAD)-x86_64.AppImage
   - ls -lh out/* # Assuming you have some files in out/ that you would like to upload
   - chmod a+x upload.sh
-  - bash ./upload.sh ./AzPainter*.AppImage
+  - bash ./upload.sh ./binaural-audio-editor*.AppImage
 
 branches:
   except:
