Added some dummy code for dialog for creating echo zone.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ include_directories(/usr/include /usr/local/include ./include ./src/timeline-tra
 set(SOURCES src/osgViewerWX.cpp
 			src/CreateStandardReverbZoneDialog.cpp src/EditMultipleStandardReverbZonesDialog.cpp 
 			src/CreateEAXReverbZoneDialog.cpp src/EditMultipleEAXReverbZonesDialog.cpp 
+			src/CreateEchoZoneDialog.cpp
 			src/reverb-zone.cpp
 			src/effects-manager.cpp
 			src/soundproducer-track-manager.cpp
