--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ set(SOURCES src/osgViewerWX.cpp
 			src/CreateEchoZoneDialog.cpp
 			src/echo-zone.cpp
 			src/reverb-zone.cpp
+			src/effect-zone.cpp
 			src/effects-manager.cpp
 			src/soundproducer-track-manager.cpp
 			src/soundproducer-track.cpp
