Updated cmakelists.txt with install target to work with making travis images.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,3 +83,12 @@ set(SOURCES src/osgViewerWX.cpp
 add_executable(${PROJECT_NAME} ${SOURCES})
 #link libraries
 target_link_libraries(${PROJECT_NAME} ${PROJECT_LINK_LIBS})
+
+#make install operations
+
+#declare files to install
+install(TARGETS binaural-audio-editor
+    DESTINATION ${CMAKE_INSTALL_PREFIX}
+    )
+install(DIRECTORY DESTINATION ../src/timeline-track-editor/resources/)
+
