--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ script:
   - wget -c "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage"
   - chmod a+x linuxdeployqt*.AppImage
   - unset QTDIR; unset QT_PLUGIN_PATH ; unset LD_LIBRARY_PATH
-  - ./linuxdeployqt*.AppImage -bundle-non-qt-libs -appimage
+  - ./linuxdeployqt*.AppImage ./binaural-audio-editor -bundle-non-qt-libs -appimage
 
 after_success:
   - find ./AppDir -executable -type f -exec ldd {} \; | grep " => /usr" | cut -d " " -f 2-3 | sort | uniq
