--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: cpp
 compiler: gcc
 sudo: require
-dist: xenial
+dist: bionic
 
 install:
   - sudo apt-get -y install automake gcc g++ make alsoft-conf openal-info libopenal-data libopenal-dev libopenscenegraph-dev libsndfile-dev libwxgtk3.0-dev libboost-dev libasio-dev libboost-date-time-dev libboost-system-dev
