--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ sudo: require
 dist: bionic
 
 install:
-  - sudo apt-get -y install automake gcc g++ make alsoft-conf openal-info libopenal-data libopenal-dev libopenscenegraph-dev libsndfile-dev libwxgtk3.0-dev libboost-dev libasio-dev libboost-date-time-dev libboost-system-dev
+  - sudo apt-get -y install build-essential debianutils automake gcc g++ make alsoft-conf openal-info libopenal-data libopenal-dev libopenscenegraph-dev libsndfile-dev libwxgtk3.0-dev libboost-dev libasio-dev libboost-date-time-dev libboost-system-dev
 
     
 script:
