--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,4 +83,6 @@ add_executable(${PROJECT_NAME} ${SOURCES})
 #link libraries
 target_link_libraries(${PROJECT_NAME} ${PROJECT_LINK_LIBS})
 
+#make install ops
+install(TARGETS binaural-audio-editor DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
 
