--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,21 @@
 language: cpp
 compiler: gcc
 sudo: require
-dist: bionic
+dist: xenial
 
 install:
-  - sudo apt-get -y install build-essential debianutils automake gcc g++ make alsoft-conf openal-info libopenal-data libopenal-dev libopenscenegraph-dev libsndfile-dev libwxgtk3.0-dev libboost-dev libasio-dev libboost-date-time-dev libboost-system-dev
+  - sudo apt-get -y install build-essential dbianutils automake gcc g++ make libopenscenegraph-dev libsndfile-dev libwxgtk3.0-dev libboost-dev libasio-dev libboost-date-time-dev libboost-system-dev
 
     
 script:
+  - wget https://github.com/kcat/openal-soft/archive/openal-soft-1.20.1.tar.gz
+  - tar -xzf openal-soft-openal-soft-1.20.1.tar.gz
+  - cd openal-soft-openal-soft-1.20.1
+  - cd build
+  - cmake ..
+  - make
+  - sudo make install
+  - cd ../..
   - mkdir build
   - cd build
   - mkdir AppDir
