--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,7 @@ install:
 
     
 script:
-  - wget https://github.com/kcat/openal-soft/archive/openal-soft-1.20.1.tar.gz
-  - tar -xzf openal-soft-openal-soft-1.20.1.tar.gz
-  - cd openal-soft-openal-soft-1.20.1
-  - cd build
-  - cmake ..
-  - make
-  - sudo make install
+  - wget https://github.com/kcat/openal-soft/archive/openal-soft-1.20.1.tar.gz && tar -xzf openal-soft-openal-soft-1.20.1.tar.gz && cd openal-soft-openal-soft-1.20.1 && cd build && cmake .. && make && sudo make install
   - cd ../..
   - mkdir build
   - cd build
